--- a/paginas/amplis.html
+++ b/paginas/amplis.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="PAGINA, AMPLIFICADORES, MARSHALL, ORANGE, FENDER">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amplificadores</title>
@@ -55,23 +56,41 @@
         </tbody>
     </table>
 
+    <div class="container">
+        <div class="row">
     <h4>Mas modelos Marshall</h4>
-    <img src="../assets/amplis/marshall1.png" alt="" class="lp1">
+    <div class="col-md-12 col-sm-6">
+    <img src="../assets/amplis/marshall1.png" alt="" class="img-fluid">
     <button type="button" class="btn btn-primary">Comprar</button>
-    <img src="../assets/amplis/marshall2.png" alt="" width="650">
+</div>
+<div class="col-md-12 col-sm-6">
+    <img src="../assets/amplis/marshall2.png" alt="" class="img-fluid">
     <button type="button" class="btn btn-primary">Comprar</button>
+</div>
 
+<div class="container">
+    <div class="row">
     <h4>Mas modelos Fender</h4>
-    <img src="../assets/amplis/fender1.png" alt="">
+    <div class="col-md-12 col-sm-6">
+    <img src="../assets/amplis/fender1.png" alt="" class="img-fluid">
     <button type="button" class="btn btn-primary">Comprar</button>
-    <img src="../assets/amplis/fender2.png" alt="" width="500">
+</div>
+<div class="col-md-12 col-sm-6">
+    <img src="../assets/amplis/fender2.png" alt="" class="img-fluid">
     <button type="button" class="btn btn-primary">Comprar</button>
+</div>
 
+<div class="container">
+    <div class="row">
     <h4>Mas modelos Orange</h4>
-    <img src="../assets/amplis/orange1.png" alt="">
+    <div class="col-md-12 col-sm-6">
+    <img src="../assets/amplis/orange1.png" alt="" class="img-fluid"> 
     <button type="button" class="btn btn-primary">Comprar</button>
-    <img src="../assets/amplis/orange2.png" alt="">
+</div>
+<div class="col-md-12 col-sm-6">
+    <img src="../assets/amplis/orange2.png" alt="" class="img-fluid">
     <button type="button" class="btn btn-primary">Comprar</button>
+</div>
 
     <p class="texto">¡No te olvides de seguirnos en nuestras redes para ofertas especiales y sorteos!</p>
     <section id="redes">
