--- a/paginas/bajos.html
+++ b/paginas/bajos.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="PAGINA, BAJOS, LESPAUL, SG,">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bajos</title>
@@ -55,24 +56,41 @@
         </tbody>
     </table>
 
+    <div class="container">
+        <div class="row">
     <h4>Mas modelos Fender</h4>
-    <img src="../assets/bajo/bajo1.png" alt="" class="lp1">
-    <button type="button" class="btn btn-primary">Comprar</button>
-    <img src="../assets/bajo/bajo2.png" alt="" width="650">
-    <button type="button" class="btn btn-primary">Comprar</button>
+        <div class="col-md-12 col-sm-6">
+            <img src="../assets/bajo/bajo1.png" alt="" class="img-fluid">
+            <button type="button" class="btn btn-primary">Comprar</button>
+        </div>
+        <div class="col-md-12 col-sm-6">
+            <img src="../assets/bajo/bajo2.png" alt="" class="img-fluid">
+            <button type="button" class="btn btn-primary">Comprar</button>
+        </div>
 
-    <h4>Mas modelos Cort</h4>
-    <img src="../assets/bajo/cort1.png" alt="">
-    <button type="button" class="btn btn-primary">Comprar</button>
-    <img src="../assets/bajo/cort2.png" alt="" width="500">
-    <button type="button" class="btn btn-primary">Comprar</button>
+        <div class="container">
+            <div class="row">
+            <h4>Mas modelos Cort</h4>
+            <div class="col-md-12 col-sm-6">
+                <img src="../assets/bajo/cort1.png" alt="" class="img-fluid">
+                <button type="button" class="btn btn-primary">Comprar</button>
+            </div>
+            <div class="col-md-12 col-sm-6">
+                <img src="../assets/bajo/cort2.png" alt="" class="img-fluid">
+                <button type="button" class="btn btn-primary">Comprar</button>
+            </div>
 
-    <h4>Mas modelos Yamaha</h4>
-    <img src="../assets/bajo/yamaha1.png" alt="">
+            <div class="container">
+                <div class="row">
+                    <h4>Mas modelos Yamaha</h4>
+    <div class="col-md-12 col-sm-6">
+        <img src="../assets/bajo/yamaha1.png" alt="" class="img-fluid">
     <button type="button" class="btn btn-primary">Comprar</button>
-    <img src="../assets/bajo/yamaha2.png" alt="">
+    </div>
+<div class="col-md-12 col-sm-6">
+    <img src="../assets/bajo/yamaha2.png" alt="" class="img-fluid">
     <button type="button" class="btn btn-primary">Comprar</button>
-
+</div>
 
 <p class="texto">¡No te olvides de seguirnos en nuestras redes para ofertas especiales y sorteos!</p>
 
