--- a/paginas/combos.html
+++ b/paginas/combos.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="PAGINA, GUITARRAS, BAJO, COMBOS, PRINCIPIANTES">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Combos</title>
@@ -23,20 +24,32 @@
         </ul>
     </nav>
 
-    <p>¿Sos principiante? Aca te armamos los combos mas economicos para que puedas empezar a tocar tu instrumento. Mandanos un mail consultando disponibilidad</p>
-
-
-    <section>
+    <section class="container">
+        <div class="row">
     <h1 class="combo1">
         Combos Guitarra
     </h1>
+    <div class="col-sm-4">
+    <img src="../assets/combo1.png" alt="" class="img-fluid"> Strato + Ampli
+    </div>
+    <div class="col-sm-4">
+    <img src="../assets/combos/combo2.png" alt="" class="img-fluid"> Tele + Ampli
+    </div>
+    <div class="col-sm-4">
+    <img src="../assets/combos/combo3.png" alt="" class="img-fluid"> Guitarra + Estuche
+    </div>
+</div>
 
-    <img src="../assets/combo1.png" alt="" width="25%"> Strato + Ampli
-    <img src="../assets/combos/combo2.png" alt="" width="25%"> Tele + Ampli
-    <img src="../assets/combos/combo3.png" alt="" width="25%"> Guitarra + Estuche
-
+<div class="row">
     <h1 class="combo1">Combos Bajo</h1>
-    <img src="../assets/combos/combo4.png" alt="">Bajo + Acc
-    <img src="../assets/combos/combo5.png" alt="">Bajo + Acc + Soporte
-    <img src="../assets/combos/combo6.png" alt="">Bajo + Ampli
+    <div class="col-sm-4">
+    <img src="../assets/combos/combo4.png" alt="" class="img-fluid">Bajo + Acc
+</div>
+<div class="col-sm-4">
+    <img src="../assets/combos/combo5.png" alt="" class="img-fluid">Bajo + Acc + Soporte
+</div>
+<div class="col-sm-4">
+    <img src="../assets/combos/combo6.png" alt="" class="img-fluid">Bajo + Ampli
+</div>
+</div>
 </section>
