--- a/paginas/guitarras.html
+++ b/paginas/guitarras.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="PAGINA, GUITARRAS, LESPAUL, SG,">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guitarras</title>
@@ -55,23 +56,43 @@
         </tbody>
     </table>
 
-    <h4>Mas modelos Gibson Les Paul</h4>
-        <img src="../assets/lp3-removebg-preview.png" alt="" class="lp1">
-        <button type="button" class="btn btn-primary">Comprar</button>
-        <img src="../assets/epiphone.png" alt="" width="650">
-        <button type="button" class="btn btn-primary">Comprar</button>
+    <div class="container">
+        <div class="row">
+            <h4>Mas modelos Gibson Les Paul</h4>
+            <div class="col-md-12 col-sm-6">
+                <img src="../assets/lp3-removebg-preview.png" alt="" class="img-fluid">
+                <button type="button" class="btn btn-primary">Comprar</button>
+            </div>
+            <div class="col-md-12 col-sm-6">
+                <img src="../assets/epiphone.png" alt="" class="img-fluid">
+                <button type="button" class="btn btn-primary">Comprar</button>
+            </div>
+        </div>
 
-        <h4>Mas modelos Epiphone SG</h4>
-        <img src="../assets/SG1.png" alt="">
-        <button type="button" class="btn btn-primary">Comprar</button>
-        <img src="../assets/SG2.png" alt="" width="500">
-        <button type="button" class="btn btn-primary">Comprar</button>
+        <div class="row">
+            <h4>Mas modelos Epiphone SG</h4>
+            <div class="col-md-12 col-sm-6">
+                <img src="../assets/SG1.png" alt="" class="img-fluid">
+                <button type="button" class="btn btn-primary">Comprar</button>
+            </div>
+            <div class="col-md-12 col-sm-6">
+                <img src="../assets/SG2.png" alt="" class="img-fluid">
+                <button type="button" class="btn btn-primary">Comprar</button>
+            </div>
+        </div>
 
-        <h4>Mas modelos Schecter</h4>
-        <img src="../assets/SC1.png" alt="">
-        <button type="button" class="btn btn-primary">Comprar</button>
-        <img src="../assets/SC2.png" alt="">
-        <button type="button" class="btn btn-primary">Comprar</button>
+        <div class="row">
+            <h4>Mas modelos Schecter</h4>
+            <div class="col-md-12 col-sm-6">
+                <img src="../assets/SC1.png" alt="" class="img-fluid">
+                <button type="button" class="btn btn-primary">Comprar</button>
+            </div>
+            <div class="col-md-12 col-sm-6">
+                <img src="../assets/SC2.png" alt="" class="img-fluid">
+                <button type="button" class="btn btn-primary">Comprar</button>
+            </div>
+        </div>
+    </div>
 
 
 <p class="texto">¡No te olvides de seguirnos en nuestras redes para ofertas especiales y sorteos!</p>
